Fix hover state on tablet sizes

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
@@ -478,5 +478,14 @@
 				display: none;
 			}
 		}
+
+		// Active state
+		.is-active {
+			@include hover() {
+				.step {
+					color: $colorWhite;
+				}
+			}
+		}
 	}
 }
